[package]
name = "rm_text_share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
log="0.4.17"
syslog="6.0.1"
notify="4.0.17"
serde= { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
html2text = "0.2.1"